Changed effects to use relative paths for textures, updated JME jars.